# GoldSrc-Config-Engineer

./: .gitattributes  .gitignore  ADDITIONAL_IDEAS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  QUICK_START.md  README.md  checklist.md  index.html  package-lock.json  package.json  tailwind.config.ts  visual set  vite.config.ts  рекомендации  чеклист визуала.md
.github/workflows/: ci.yml
archive/: README.md
archive/v2-python-customtkinter/: README.md  build.py  main.py  requirements.txt
data/: README.md  buyscripts.json  hardware.json  keyboard_layout.json  modes.json  network_presets.json  templates.json  visual_presets.json
docs/: DESIGN_SYSTEM.md
goldsr_cfg_core/: Cargo.toml  build.rs
goldsr_cfg_core/src/: cfg_config.rs  exporter.rs  generator.rs  importer.rs  lib.rs  validator.rs
goldsr_cfg_core/src/data/: aliases.rs  buyscripts.rs  cvars.rs  mod.rs  modes.rs  overlay.rs  presets.rs
public/: CHANGELOG.md
scripts/: README-PORTABLE.txt  package-portable.ps1
src/: App.tsx  main.tsx  themeBootstrap.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog_sync.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs  catalog_commands.rs  config_commands.rs  fetch_commands.rs  game_commands.rs  history_commands.rs  mod.rs  profile_commands.rs  settings_commands.rs
src/hooks/: useAsync.ts  useDebouncedValue.ts  useProfiles.ts
src/lib/: aliasPrefs.ts  api.ts  appLogger.ts  appPrefs.ts  catalogSyncUi.ts  cfgClipboardSnippets.ts  cfgFiles.ts  csSensitivity.ts  (+17 more)
(+119 files in other folders)
