[package]
name = "goldsr_cfg_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and game data for GoldSrc Config Engineer (no UI)"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
